--- a/Report/5112Report_Group7.tex
+++ b/Report/5112Report_Group7.tex
@@ -351,9 +351,12 @@ Recent developments in LLM architectures show several emerging trends:
 This comprehensive understanding of different LLM architectures provides the foundation for selecting appropriate models for specific applications in dialogue systems and local LLM platforms.
 % 对不同LLM架构的全面理解为在对话系统和本地LLM平台中选择适当模型提供了基础。
 
+
+
+
+% Task 2.2
 \subsection{Local LLM Platform Implementation}
 % 本地LLM平台实现
-
 
 This subsection details the design and implementation of our local Large Language Model (LLM) platform developed in Task 2. The platform enables fully offline, multi-turn dialogue with an optimized quantized Llama 3.2 3B Instruct model using the \texttt{llama-cpp-python} backend, supporting streaming token-level generation, context management, and persistent conversation storage.
 % 本小节介绍任务2中本地LLM平台的设计与实现。平台基于 \texttt{llama-cpp-python} 运行量化的 Llama 3.2 3B Instruct 模型，支持完全离线、多轮对话、逐 token 流式输出、上下文管理以及对话持久化存储。
@@ -477,8 +480,10 @@ Figure~\ref{fig:llama_chat_screenshot} shows a real dialogue example captured fr
 Overall, the implementation delivers a privacy-preserving, extensible inference substrate suitable for subsequent integration with higher-level dialogue management and evaluation modules in later tasks.
 % 总体而言，该实现提供一个隐私友好、可扩展的推理底座，为后续任务中的高层对话管理与评估模块集成奠定基础。
 
+\subsection{Comparation of Different Pretrained Models}
+% 不同预训练模型的比较
 
-
+% 本节将对比不同的预训练模型在对话系统中的表现，包括它们的架构、训练数据和生成能力等方面。
 
 \section{Task 3: Dialogue System Development}
 % 任务3：对话系统开发
